--- a/_posts/SpringBoot/2021-04-12-SpringBoot-05.md
+++ b/_posts/SpringBoot/2021-04-12-SpringBoot-05.md
@@ -1,9 +1,9 @@
 ---
-title: Oracle시작하기3
+title: SpringBoot시작하기
 layout: post
 subtitle: 시작하기3
-categories: oracle
-tags: oracle
+categories: SpringBoot
+tags: SpringBoot
 comments: true
 ---
 
