--- a/_posts/oracle/2021-04-12-oracle-04.md
+++ b/_posts/oracle/2021-04-12-oracle-04.md
@@ -1,11 +1,11 @@
 ---
-title: Oracle시작하기2
+title: Oracle시작하기
 layout: post
-subtitle: oracle 시작하기2
+subtitle: 시작하기4
 categories: oracle
 tags: oracle
 comments: true
 ---
 
 ## 개요
-> 내용2
+> 내용4
